--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.499.0",
     "@aws-sdk/s3-presigned-post": "^3.501.0",
-    "@liaoliaots/nestjs-redis": "^9.0.5",
+    "@nestjs-modules/ioredis": "^2.0.1",
     "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
@@ -42,11 +42,11 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
-    "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
     "handlebars": "^4.7.8",
     "ioredis": "^5.3.2",
     "joi": "^17.12.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "^3.7.0",
     "nodemailer": "^6.9.8",
     "passport": "^0.7.0",
