--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -23,3 +23,6 @@ jobs:
           script: |
             chmod +x wagglewaggle_server/scripts/deploy-dev.sh
             ./wagglewaggle_server/scripts/deploy-dev.sh
+            
+            chmod +x wagglewaggle_server/scripts/health-check.sh
+            ./wagglewaggle_server/scripts/health-check.sh
