--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@aws-sdk/s3-presigned-post": "^3.501.0",
     "@nestjs-modules/ioredis": "^2.0.1",
     "@nestjs-modules/mailer": "^1.10.3",
+    "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -37,6 +38,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
