--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.499.0",
     "@aws-sdk/s3-presigned-post": "^3.501.0",
+    "@elastic/elasticsearch": "^8.12.0",
     "@nestjs-modules/ioredis": "^2.0.1",
     "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/elasticsearch": "^10.0.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
