--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,31 +1,16 @@
 version: '3'
 services:
-  app_5001:
-    build:
-      context: .
-    ports:
-      - "5001:5000"
-    environment:
-      NODE_ENV: production
-
-  app_5002:
-    build:
-      context: .
-    ports:
-      - "5002:5000"
-    environment:
-      NODE_ENV: production
-
   es01:
     image: elasticsearch:8.12.0
     container_name: es01
     environment:
       - node.name=es01
       - cluster.name=es-docker-cluster
-      - cluster.initial_master_nodes=es01
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - xpack.security.enabled=false
+      - "discovery.type=single-node"
+      - "ES_VM_MAX_MAP_COUNT=262144"
     #      - xpack.security.enabled=true  # SSL/TLS
     #      - xpack.security.transport.ssl.enabled=true
     ulimits:
@@ -36,5 +21,31 @@ services:
       - data01:/usr/share/elasticsearch/data
     ports:
       - "9200:9200"
+    networks:
+      - wagglewaggle_network
+
+  app_5001:
+    build:
+      context: .
+    ports:
+      - "5001:5000"
+    environment:
+      NODE_ENV: production
+    networks:
+      - wagglewaggle_network
+
+  app_5002:
+    build:
+      context: .
+    ports:
+      - "5002:5000"
+    environment:
+      NODE_ENV: production
+    networks:
+      - wagglewaggle_network
+
 volumes:
   data01: {}
+
+networks:
+  wagglewaggle_network:
