--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,16 +11,12 @@ services:
       - xpack.security.enabled=false
       - "discovery.type=single-node"
       - "ES_VM_MAX_MAP_COUNT=262144"
-    #      - xpack.security.enabled=true  # SSL/TLS
-    #      - xpack.security.transport.ssl.enabled=true
     ulimits:
       memlock:
         soft: -1
         hard: -1
     volumes:
       - data01:/usr/share/elasticsearch/data
-    ports:
-      - "9200:9200"
     networks:
       - wagglewaggle_network
 
@@ -49,3 +45,4 @@ volumes:
 
 networks:
   wagglewaggle_network:
+    driver: bridge
