--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.499.0",
     "@aws-sdk/s3-presigned-post": "^3.501.0",
+    "@aws-sdk/s3-request-presigner": "^3.515.0",
     "@elastic/elasticsearch": "^8.12.0",
     "@nestjs-modules/ioredis": "^2.0.1",
     "@nestjs-modules/mailer": "^1.10.3",
@@ -63,7 +64,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.19"
+    "typeorm": "^0.3.19",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -75,6 +77,7 @@
     "@types/multer-s3": "^3.0.3",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
