--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,25 +1,38 @@
 version: '3'
 services:
-  es01:
-    image: elasticsearch:8.12.0
-    container_name: es01
-    environment:
-      - node.name=es01
-      - cluster.name=es-docker-cluster
-      - cluster.initial_master_nodes=es01
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - xpack.security.enabled=false
-#      - xpack.security.enabled=true  # SSL/TLS
-#      - xpack.security.transport.ssl.enabled=true
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - data01:/usr/share/elasticsearch/data
+  redis:
+    image: redis:6.0.9
+    container_name: redis
     ports:
-      - "9200:9200"
-volumes:
-  data01: {}
+      - "6379:6379"
+    volumes:
+      - ./redis/data:/data
+      - ./redis/conf/redis.conf:/usr/local/conf/redis.conf
+    labels:
+      - "name=redis"
+      - "mode=standalone"
+    restart: always
+    command: redis-server /usr/local/conf/redis.conf
+#  es01:
+#    image: elasticsearch:8.12.0
+#    container_name: es01
+#    environment:
+#      - node.name=es01
+#      - cluster.name=es-docker-cluster
+#      - cluster.initial_master_nodes=es01
+#      - bootstrap.memory_lock=true
+#      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+#      - xpack.security.enabled=false
+##      - xpack.security.enabled=true  # SSL/TLS
+##      - xpack.security.transport.ssl.enabled=true
+#    ulimits:
+#      memlock:
+#        soft: -1
+#        hard: -1
+#    volumes:
+#      - data01:/usr/share/elasticsearch/data
+#    ports:
+#      - "9200:9200"
+#volumes:
+#  data01: {}
 
